# work-cortex

./: .gitignore  ARCHITECTURE.md  CHANGES.md  PRODUCT.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tools.json  vitest.config.ts
abilities/data-analysis/: .env.local.example  app.config.example.json  app.config.md  package.json  tsconfig.tools.json
atomic-abilities/: package-lock.json  tsconfig.json
atomic-abilities/core/: registry.ts  structured.ts
atomic-abilities/scripts/: smoke-image-generate.ts
design/: 01-contracts.md  04-core-sessions.md  05-core-runtime.md  06-capability-data-analysis.md  A1-atomic-abilities.md  README.md
docs/: ARCHITECTURE.md  PRODUCT.md
docs/design/: 02-connector-lark.md  03-core-queue.md  06-capability-data-analysis.md  07-service.md  README.md  migration-repo-layout.md
domains/app-config/: config.ts
domains/datafinder-interface/: README.md  UPDATE.md  __init__.py  cli.py  cli.ts  client.py  client.ts  manifest.json  module.json  openapi-routing.md
domains/event-knowledge/: extract_events.py  extract_events.ts  module.json  sync_app.sh  sync_nextop.sh
domains/intent-routing/: capabilities.json  capability-inventory.md  (+2 more)
gateway-console/: README.md
knowledge-store/: data-model.json  event-catalog.json
platform/console/: .gitignore  Cargo.toml  bundle.sh
platform/console/src/: app.rs  control.rs  main.rs  model.rs  theme.rs
service-gateway/: config.example.json  package-lock.json  service.ts  tsconfig.json
tests/: migration-contracts.test.ts  test_migration_contracts.py
(+163 files in other folders)
